...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_hub_and_device"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_hubs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:textSize="18sp"/>

...
